2008-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* contrib/emacs/Makefile.in: Respect DESTDIR.

2008-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* interp-proclaims.lisp: Regenerate.

2008-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/exprode.spad.pamphlet: use "exquo" instead
	of "fixedPointExquo" to work around issue 301.

2008-10-26  Bill Page <bill.page@newsynthesis.org>

	* src/algebra/clifford.spad.pamphlet,
	src/algebra/constant.spad.pamphlet: Add coercions to InputForm
	src/interp/format.boot: Improve unparse.

2008-10-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Correct initialization of $envHashTable.
	* src/interp/compiler.boot: initEnvHashTable(): New function.
	compTopLevel(): Use it.

2008-10-21  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/interp/i-output.boot: add TeXOutput marker
	* contrib/emacs/fricas.el: simplify temporary file handling, add
	support for inline display of LaTeXed code

2008-10-20  Ralf Hemmecke  <ralf@hemmecke.de>

	* Makefile.in, configure.ac, contrib/emacs/Makefile.in:
	Install fricas.el and an efricas script to run fricas inside
	emacs.

2008-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Speed up DirectProduct directly using Lisp operations.
	* src/interp/vmlisp.lisp: add QLESSP macro.
	src/interp/sys-pkg.lisp: export it.
	src/algebra/vector.spad.pamphlet: Use Lisp operations
	in comparisons.

2008-10-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/ptrees.boot: add code from ptrop.boot
	src/interp/ptrop.boot: Remove.
	src/interp/Makefile.in: Adjust
	src/interp/g-opt.boot, src/interp/g-util.boot,
	src/interp/i-code.boot, src/interp/interop.boot,
	src/interp/nrunfast.boot, src/interp/pspad2.boot,
	src/interp/template.boot, src/interp/termrw.boot: Misc cleanups.

2008-10-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/lisp/fricas-lisp.lisp:  Turn
	Closure CL based AXIOMsys into binary.
	src/sman/sman.c: Adjust.
