@@ -1,4 +1,11 @@
 2008-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+            Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* contrib/emacs/Makefile.in, contrib/emacs/fricas.el:
+	Make fricas command in fricas mode and efricas variable.
+	
+
+2008-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* contrib/emacs/Makefile.in: Respect DESTDIR.
 
